Add internal JWT auth to edge functions and update docs
Supabase edge functions now perform JWT verification and resource ownership checks internally, allowing the 'Verify JWT' flag to be disabled in Supabase config. Updated all user-facing edge functions to require and validate Authorization headers, verify user identity, and check resource ownership before proceeding. Updated README with new setup instructions, credential notes, and n8n v2 guidance. Removed obsolete webhook-handler function.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -50,17 +50,35 @@ ip_version = "IPv4"
 [analytics]
 enabled = false
 
+# ============ USER-FACING FUNCTIONS ============
+# These verify JWT internally and check resource ownership
+
 [functions.generate-notebook-content]
-verify_jwt = true
+verify_jwt = false
 
 [functions.send-chat-message]
-verify_jwt = true
+verify_jwt = false
 
 [functions.process-document]
-verify_jwt = true
+verify_jwt = false
+
+[functions.process-additional-sources]
+verify_jwt = false
+
+[functions.generate-audio-overview]
+verify_jwt = false
+
+[functions.refresh-audio-url]
+verify_jwt = false
+
+[functions.generate-note-title]
+verify_jwt = false
+
+# ============ CALLBACK FUNCTIONS ============
+# Called by external webhooks (n8n), no user context available
 
 [functions.process-document-callback]
 verify_jwt = false
 
-[functions.process-additional-sources]
-verify_jwt = true
+[functions.audio-generation-callback]
+verify_jwt = false
